--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^5.2.6",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.17.9",
     "antd": "^5.12.8",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
@@ -22,11 +23,11 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
