--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
@@ -35,6 +36,7 @@
     "@tanstack/eslint-plugin-query": "^5.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
