--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.17.9",
     "antd": "^5.12.8",
+    "antd-img-crop": "^4.21.0",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.0",
+    "dayjs": "^1.11.10",
     "immutability-helper": "^3.1.1",
     "lucide-react": "^0.307.0",
     "moment": "^2.30.1",
